--- a/css/styles.css
+++ b/css/styles.css
@@ -159,10 +159,10 @@ section {
   text-align: center;
 }
 .header-content p {
-  padding: 5px;
+  padding: 0rem 2rem;
   text-align: center;
-  font-size: calc(1px + 1rem);
-  margin: 0.7rem 4rem;
+  font-size: calc(1px + 0.7rem);
+  margin: 0.7rem 2rem;
   line-height: 2rem;
 }
 
@@ -1030,15 +1030,15 @@ section {
     margin: 1rem 0rem 0rem 0rem;
   }
 }
-@media screen and (min-width: 481px) and (max-width: 1024px) {
+@media screen and (min-width: 481px) and (max-width: 1440) {
   .container {
     display: flex;
     flex-direction: column;
-    padding: 0rem 1rem;
+    padding: 0rem;
     align-content: center;
   }
   .header-content {
-    transform: translate(0, 25%) !important;
+    transform: translate(0, 15%) !important;
   }
   .header-content p {
     margin: 0.7rem 1.5rem !important;
@@ -1072,9 +1072,9 @@ section {
     font-size: 2.5rem;
   }
 }
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1441px) {
   .header-content p {
-    margin: 0.7rem 8.5rem !important;
+    margin: 0.7rem 2.5rem !important;
   }
   .blogs {
     grid-template-columns: repeat(2, 1fr);
