--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -162,10 +162,10 @@ section {
   }
 
   p {
-    padding: 5px;
+    padding: 0rem 2rem;
     text-align: center;
-    font-size: calc(1px + 1rem);
-    margin: 0.7rem 4rem;
+    font-size: calc(1px + 0.7rem);
+    margin: 0.7rem 2rem;
     line-height: 2rem;
   }
 }
