--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   transition: all 0.2s ease;
-  font-family: "Silkscreen", sans-serif;
+  font-family: "Shadows Into Light", cursive;
 }
 
 :root {
@@ -47,7 +47,6 @@
 
 body {
   background: var(--color-primary);
-  font-family: "Sono", sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
@@ -78,6 +77,7 @@ a {
 
 header {
   min-height: 100vh;
+  margin: 0;
   position: relative;
   color: var(--color-white);
   overflow: hidden;
@@ -139,18 +139,19 @@ section {
   flex-direction: column;
   z-index: 2;
   align-items: center;
-  padding: 1rem;
+  padding: 10rem 4rem;
   justify-content: center;
   text-align: center;
-  transform: translate(0, 50%);
+  transform: translate(0, 40%);
   min-height: 30vh;
+  letter-spacing: 7px;
   border-radius: 15px;
   background-color: var(--header-background);
 }
 .header-content .name {
   margin: 0;
   text-align: center;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 .header-content .name span {
   color: var(--color-secondary);
@@ -184,6 +185,7 @@ section {
   grid-gap: 2rem;
 }
 .about-container .right-about .about-item {
+  height: 25vh;
   border: 1px solid var(--color-primary);
   border-radius: 25px;
   transition: all 0.4s ease-in-out;
@@ -227,7 +229,7 @@ section {
 }
 .about-container .left-about p {
   line-height: 2rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding: 1rem;
   color: var(--color-grey-1);
 }
@@ -374,6 +376,7 @@ section {
   -moz-column-gap: 2rem;
        column-gap: 2rem;
   row-gap: 3rem;
+  margin: 2rem 5rem;
   justify-self: center;
   justify-content: center;
   align-content: center;
@@ -385,8 +388,8 @@ section {
   border: 1px solid var(--color-primary);
   align-content: center;
   justify-content: center;
-  width: 50vh;
-  height: 40vh;
+  width: 25vw;
+  height: 30vh;
   position: relative;
   border-radius: 45px;
   box-shadow: 6px -6px 15px var(--box-color-1), -6px 6px 15px var(--box-color-2);
@@ -396,8 +399,8 @@ section {
   scale: 0.9;
 }
 .portfolios .portfolio-item img {
-  width: 50vh;
-  height: 40vh;
+  width: 25vw;
+  height: 30vh;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 45px;
@@ -407,8 +410,8 @@ section {
   opacity: 0;
 }
 .portfolios .portfolio-item .hover-items {
-  width: 50vh;
-  height: 40vh;
+  width: 25vw;
+  height: 30vh;
   background-color: var(--color-secondary);
   position: absolute;
   left: 0;
@@ -540,6 +543,7 @@ section {
   display: flex;
   margin: 2rem 7rem;
   padding-top: 3.5rem;
+  transform: translate(0, 40%);
 }
 .contact-content-con .left-contact {
   flex: 2;
@@ -667,17 +671,19 @@ section {
 .main-btn {
   border-radius: 40px;
   color: inherit;
-  font-weight: 600;
+  font-weight: 500;
   position: relative;
+  justify-content: center;
   display: flex;
   align-self: center;
+  justify-items: center;
   align-items: center;
   margin: 3.5rem 0rem 1.5rem 0rem;
   overflow: hidden;
   box-shadow: -5px 5px 6px var(--box-color-1), 5px -5px 6px var(--box-color-2);
 }
 .main-btn .btn-text {
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding: 0 2rem;
 }
 .main-btn .btn-icon {
@@ -862,8 +868,8 @@ section {
     height: 50px;
   }
   .header-content {
-    margin: 4rem 0 0 0 !important;
-    transform: translate(0, 0) !important;
+    margin: 0;
+    transform: translate(0, 20%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1027,21 +1033,13 @@ section {
   .main-btn {
     justify-content: center;
     align-content: center;
-    margin: 1rem 0rem 0rem 0rem;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 1440) {
   .container {
     display: flex;
     flex-direction: column;
-    padding: 0rem;
     align-content: center;
-  }
-  .header-content {
-    transform: translate(0, 15%) !important;
-  }
-  .header-content p {
-    margin: 0.7rem 1.5rem !important;
   }
   .about-container {
     grid-template-columns: repeat(1, 1fr);
@@ -1073,9 +1071,6 @@ section {
   }
 }
 @media screen and (min-width: 1441px) {
-  .header-content p {
-    margin: 0.7rem 2.5rem !important;
-  }
   .blogs {
     grid-template-columns: repeat(2, 1fr);
     margin-top: 6rem;
